src/turtle.peg
start = statements

number =
	n:[0-9]+
    	{ return +n.join(''); }

validfirstchar
    = [a-zA-Z_]

validchar
    = [0-9a-zA-Z_]

identifier
    = firstchar:validfirstchar chars:validchar*
        { return firstchar + chars.join(''); }

statements = statement*

statement =
	command /
	identifier

command =
	repeat
    / move
    / rotate
    / penUp
    / penDown

repeat =
	_ "repeat" _ "(" _ n:number _ ")" _ "{" _ body:statements _ "}" _
    	{ return { tag: "repeat", expr: n, body: body }; }

move =
	_ "move" _ "(" _ expr:number _ ")" _ ";" _
    	{ return { tag: "move", expr: expr }; }

rotate =
	_ "rotate" _ "(" _ expr:number _ ")" _ ";" _
    	{ return { tag: "rotate", expr: expr }; }

penUp =
	_ "penUp" _ "(" _ ")" _ ";" _
    	{ return { tag: "penUp" }; }

penDown =
	_ "penDown" _ "(" _ ")" _ ";" _
    	{ return { tag: "penDown" }; }

_ = [ \t\n]*
__ = [ \t\n]+
